Made the dashboard wider

--- a/Web/Areas/Finance/Views/Home/Index.cshtml
+++ b/Web/Areas/Finance/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     @*<link href="~/Content/Dashboard/dashboardcomponents.css" rel="stylesheet" />*@
 }
 <!-- BEGIN COMPONENTS INDENTATION-->
-<div class="container">
+@*<div class="container">*@
     <div class="row ui-sortable" id="sortable_portlets1" ng-app="myApp">
 
         <!-- Begin Data entry status portlet-->
@@ -358,7 +358,7 @@
             </div>
             <!-- END 3RD PORTLET-->
         </div>
-</div>
+@*</div>*@
 <!-- END COMPONENTS INDENTATION-->
 
 <script>
