--- a/Web/Areas/Procurement/Views/Home/Index.cshtml
+++ b/Web/Areas/Procurement/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
 </style>
 
 <div ng-app="myApp">
-    <div class="container" ng-controller="RecentBidsController">
+    <div  ng-controller="RecentBidsController">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                 <div class="dashboard-stat blue-madison">
