--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -82,7 +82,7 @@
     </style>
 }
 
-<div ng-app="myApp" class="container">
+<div ng-app="myApp" >
     <div class="row">
         <div class="portlet solid bordered" ng-controller="ImportantNumbersController">
             <div class="portlet-title">
@@ -149,7 +149,7 @@
     </div>
 
 
-        <div ng-controller="RegionalDashboardController" class="container">
+        <div ng-controller="RegionalDashboardController" >
             <div class="portlet light bordered bg-inverse" ng-controller="ImportantNumbersController">
                 <div class="portlet-title">
                     <div class="caption font-green-sharp">
